End of season team selection run

--- a/notebooks/Team Selection.ipynb
+++ b/notebooks/Team Selection.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "# (Optional) Scale predictions for players in a team e.g. <1 if you are unsure about squad rotation\n",
     "team_prediction_scalars = {\n",
-    "    'Manchester City': 0.8\n",
+    "    'Manchester City': 1.5\n",
     "}"
    ]
   },
@@ -76,13 +76,13 @@
    "outputs": [],
    "source": [
     "payload = {\n",
-    "    \"previous_gw\": \"36\",\n",
+    "    \"previous_gw\": \"37\",\n",
     "    \"season\": \"2019-20\",\n",
     "    \"fpl_team_id\": fpl_team_id, \n",
     "    \"fpl_email\": fpl_email, \n",
     "    \"fpl_password\": fpl_password,\n",
     "#     \"player_overwrites\": player_overwrites,\n",
-    "#     \"team_prediction_scalars\": team_prediction_scalars\n",
+    "    \"team_prediction_scalars\": team_prediction_scalars\n",
     "}"
    ]
   },
